dump1090-mutability (1.08.2302.14+1mu-2) UNRELEASED; urgency=medium

  * Fix a memory leak from use of realpath() in HTTP request processing.

 -- Oliver Jowett <oliver@mutability.co.uk>  Sun, 07 Dec 2014 14:14:25 +0000

dump1090-mutability (1.08.2302.14+1mu-1) unstable; urgency=medium

  * Initial release.

 -- Oliver Jowett <oliver@mutability.co.uk>  Sat, 06 Dec 2014 23:07:02 +0000