@@ -81,6 +81,9 @@ DUMP1090_USER="dump1090"
 # Port to listen on for Beast-format output connections. 0 disables.
 #BEAST_OUTPUT_PORT=30005
 
+# Port to listen on for FATSV-format output connections. 0 disables.
+#FATSV_OUTPUT_PORT=10001
+
 # TCP heartbeat interval in seconds. 0 disables.
 #NET_HEARTBEAT=60
 
